--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,23 @@
         }
     ],
     "require": {
-        "php": ">=8.1"
+        "php": ">=8.0.0",
+        "psr/cache": "^3.0",
+        "psr/log": "^3.0"
     },
     "autoload": {
         "psr-4": {
             "Cl\\": "src/"
         }
-    }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0",
+        "squizlabs/php_codesniffer": "^3.0.0"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Cl\\Cache\\Test\\": "src/Cache/test/"
+        }
+    },
 
 }
