--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require": {
         "php": ">=8.0.0",
         "concept-labs/cache": ">=0.0.1",
-        "psr/cache": "^3.0",
-        "psr/log": "^3.0"
+	"concept-labs/event-dispacther": ">=0.0.1",
     },
     "autoload": {
         "psr-4": {
