--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": ">=8.0.0",
-        "concept-labs/cache": ">=0.0.1",
-        "concept-labs/event-dispatcher": ">=0.0.1",
-        "concept-labs/container" : ">=0.0.1",
-        "concept-labs/config": ">=0.0.1"
+        "php": "^8.0",
+        "concept-labs/cache": "^1.0",
+        "concept-labs/event-dispatcher": "^1.0",
+        "concept-labs/container" : "^1.0",
+        "concept-labs/config": "^1.0"
     },
     "autoload": {
         "psr-4": {
