--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "concept-labs/cache": "^1.0",
         "concept-labs/event-dispatcher": "^0.0",
         "concept-labs/container" : "^0.0",
-        "concept-labs/config": "^1.0"
+        "concept-labs/config": "^1.0",
+        "concept-labs/log": "^1.0"
     },
     "autoload": {
         "psr-4": {
